--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="orange">
-<h1>Jenkins Demo Class 123</h1>
+<body bgcolor="aqua">
+<h1>Jenkins Demo Class</h1>
 </body>
 </html>
